--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,58 @@
     Welcome to {{ title }}!
   </h1>
 </div>
-<h2> Smart way to manage Benefits</h2>
-<router-outlet></router-outlet>
 
-<app-employer-list></app-employer-list>
+<span class="fa fa-spinner spinner"
+      *ngIf="loading"></span>
+
+<!-- Main part of the menu-->
+<nav class="navbar navbar-expand navbar-light bg-light">
+  <a class="navbar-brand">{{pageTitle}}</a>
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link"
+         [routerLink]="['/welcome']"
+         routerLinkActive="active">Home</a>
+    </li>
+    <li class="nav-item" *ngIf="isLoggedIn">
+      <a class="nav-link"
+         [routerLink]="['/administration']"
+         routerLinkActive="active">Administartion</a>
+    </li>
+    <li class="nav-item" *ngIf="isLoggedIn">
+      <a class="nav-link"
+         [routerLink]="['/employee']"
+         routerLinkActive="active">Enrollments</a>
+    </li>
+  </ul>
+
+  <!-- Left justified part of the menu -->
+  <ul class="navbar-nav ml-auto">
+    <li class="nav-item"
+        *ngIf="isLoggedIn">
+      <a class="nav-link"
+         [routerLink]="['/login']">Welcome {{ userName }}</a>
+    </li>
+     <li class="nav-item"
+        *ngIf="!isLoggedIn">
+      <a class="nav-link"
+         [routerLink]="['/login']">Log In</a>
+    </li>
+    <li class="nav-item"
+        *ngIf="isLoggedIn">
+      <a class="nav-link"
+         (click)="logOut()">Log Out</a>
+    </li>
+  </ul>
+</nav>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-10">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
+<div style="text-align:center">
+    <h4> Smart way to manage Benefits</h4>
+</div>
