Added routing for admin part

--- a/src/app/admin/employer-list.component.html
+++ b/src/app/admin/employer-list.component.html
@@ -45,7 +45,7 @@
                 [style.margin.px]='imageMargin'>              
             </td>
             <td>{{ employer.employerName | uppercase }}</td>
-            <td>{{ employer.employerCode | lowercase | convertToSpaces: '-' }}</td>            
+            <td>{{ employer.employerCode | lowercase }}</td>            
             <td>{{ employer.startDate | lowercase }}</td>            
             <td>{{ employer.employeeCount | number }}</td>                        
             <td>{{ employer.employerRevenue | currency }}</td>                                                            
