--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,13 +19,13 @@
     </li>
     <li class="nav-item" *ngIf="isLoggedIn">
       <a class="nav-link"
-         [routerLink]="['/administration']"
-         routerLinkActive="active">Administartion</a>
+         [routerLink]="['/employer']"
+         routerLinkActive="active">Admin(Employers)</a>
     </li>
     <li class="nav-item" *ngIf="isLoggedIn">
       <a class="nav-link"
          [routerLink]="['/employee']"
-         routerLinkActive="active">Enrollments</a>
+         routerLinkActive="active">Employee</a>
     </li>
   </ul>
 
@@ -33,8 +33,10 @@
   <ul class="navbar-nav ml-auto">
     <li class="nav-item"
         *ngIf="isLoggedIn">
-      <a class="nav-link"
-         [routerLink]="['/login']">Welcome {{ userName }}</a>
+        <div class="nav-link">Welcome {{ userName }}</div>
+        
+      <!-- <a class="nav-link"
+         [routerLink]="['/login']">Welcome {{ userName }}</a> -->
     </li>
      <li class="nav-item"
         *ngIf="!isLoggedIn">
