--- a/src/app/home/welcome.component.html
+++ b/src/app/home/welcome.component.html
@@ -1,5 +1,20 @@
-<p>
-  welcome works!
-  
-  click on the Login o right corner to begin
-</p>
+<nav class="navbar navbar-expand navbar-light bg-light">
+  {{pageTitle}}
+  <!-- <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link"
+         [routerLink]="['/welcome']"
+         routerLinkActive="active">Home</a>
+    </li>
+    <li class="nav-item" *ngIf="isLoggedIn">
+      <a class="nav-link"
+         [routerLink]="['/employer']"
+         routerLinkActive="active">Admin(Employer)</a>
+    </li>
+    <li class="nav-item" *ngIf="isLoggedIn">
+      <a class="nav-link"
+         [routerLink]="['/employee']"
+         routerLinkActive="active">Enrollments</a>
+    </li>
+  </ul> -->
+</nav>
