--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,3 +1,23 @@
 <p>
-  employee works!
+  employee works! Lets Put some Image tiles here 
+  for Different Action Loading in the same Parent Router
 </p>
+<nav class="navbar navbar-expand navbar-light bg-light">
+    <ul class="navbar-nav">
+      <li class="nav-item" *ngIf="isLoggedIn">
+        <a class="nav-link"
+           [routerLink]="['/benefit']"
+           routerLinkActive="active">Benefits</a>
+      </li>
+      <li class="nav-item" *ngIf="isLoggedIn">
+        <a class="nav-link"
+           [routerLink]="['/lifeevent']"
+           routerLinkActive="active">Events</a>
+      </li>
+      <li class="nav-item" *ngIf="isLoggedIn">
+        <a class="nav-link"
+           [routerLink]="['/dependent']"
+           routerLinkActive="active">Dependent(beneficiaries)</a>
+      </li>      
+    </ul>
+</nav>
