--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,18 +1,32 @@
-<p>
-  employer works! Lets Put some tiles here 
-  for Different Action Loading in the same Parent Router
-</p>
-<nav class="navbar navbar-expand navbar-light bg-light">
-    <ul class="navbar-nav">
-      <li class="nav-item" *ngIf="isLoggedIn">
-        <a class="nav-link"
-           [routerLink]="['/employerlist']"
-           routerLinkActive="active">Employers</a>
-      </li>
-      <li class="nav-item" *ngIf="isLoggedIn">
-        <a class="nav-link"
-           [routerLink]="['/benefit']"
-           routerLinkActive="active">Benefits</a>
-      </li>
-    </ul>
-</nav> 
+<div class="card-body">
+    <div class="container-fluid">
+      <table width="100%">
+        <tr width="100%">
+            <div class="row">
+                <div class="col-xs-6 col-md-4">
+                    <button type="button" class="btn btn-info btn-block" width="100%"
+                    [routerLink]="['/employerlist']"
+                    routerLinkActive="active">    Employers Management      </button> 
+                </div>
+                <div class="col-xs-6 col-md-4">
+                    <button type="button" class="btn btn-info btn-block" width="100%"
+                    [routerLink]="['/plansetup']"
+                    routerLinkActive="active">       Plan SetUp       </button> 
+                </div>
+                <div class="col-xs-6 col-md-4">
+                    <button type="button" class="btn btn-info btn-block" width="100%">Reports</button>                   
+                </div>
+              </div>
+        </tr>
+        <tr width="100%">
+          <td>
+              <div class="text-center">
+                  <img src="./assets/images/adminlandingpage515.gif"
+                       class="img-responsive center-block"
+                       style="width:100%; max-height:525px;padding-bottom:1px" />
+                </div>            
+          </td>
+        </tr>        
+      </table>
+    </div>
+  </div>
