--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,23 +1,34 @@
-<p>
-  employee works! Lets Put some Image tiles here 
-  for Different Action Loading in the same Parent Router
-</p>
-<nav class="navbar navbar-expand navbar-light bg-light">
-    <ul class="navbar-nav">
-      <li class="nav-item" *ngIf="isLoggedIn">
-        <a class="nav-link"
-           [routerLink]="['/benefit']"
-           routerLinkActive="active">Benefits</a>
-      </li>
-      <li class="nav-item" *ngIf="isLoggedIn">
-        <a class="nav-link"
-           [routerLink]="['/lifeevent']"
-           routerLinkActive="active">Events</a>
-      </li>
-      <li class="nav-item" *ngIf="isLoggedIn">
-        <a class="nav-link"
-           [routerLink]="['/dependent']"
-           routerLinkActive="active">Dependent(beneficiaries)</a>
-      </li>      
-    </ul>
-</nav>
+<div class="card-body">
+    <div class="container-fluid">
+      <table width="100%">
+        <tr width="100%">
+            <div class="row">
+                <div class="col-xs-6 col-md-4">
+                  <button type="button" class="btn btn-info btn-block" width="100%"
+                  [routerLink]="['/benefit']"
+                  routerLinkActive="active">Benefits</button>                   
+                </div>
+                <div class="col-xs-6 col-md-4">
+                    <button type="button" class="btn btn-info btn-block" width="100%"
+                    [routerLink]="['/lifeevent']"
+                    routerLinkActive="active">Events</button>
+                </div>
+                <div class="col-xs-6 col-md-4">
+                    <button type="button" class="btn btn-info btn-block" width="100%"
+                    [routerLink]="['/dependent']"
+                    routerLinkActive="active">Dependent(beneficiaries)</button>
+                </div>
+              </div>
+        </tr>
+        <tr width="100%">
+          <td>
+              <div class="text-center">
+                  <img src="./assets/images/employeelandingpage515.gif"
+                       class="img-responsive center-block"
+                       style="width:100%; max-height:525px;padding-bottom:1px" />
+                </div>            
+          </td>
+        </tr>        
+      </table>
+    </div>
+  </div>
