--- a/src/app/home/welcome.component.html
+++ b/src/app/home/welcome.component.html
@@ -1,20 +1,32 @@
-<nav class="navbar navbar-expand navbar-light bg-light">
-  {{pageTitle}}
-  <!-- <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link"
-         [routerLink]="['/welcome']"
-         routerLinkActive="active">Home</a>
-    </li>
-    <li class="nav-item" *ngIf="isLoggedIn">
-      <a class="nav-link"
-         [routerLink]="['/employer']"
-         routerLinkActive="active">Admin(Employer)</a>
-    </li>
-    <li class="nav-item" *ngIf="isLoggedIn">
-      <a class="nav-link"
-         [routerLink]="['/employee']"
-         routerLinkActive="active">Enrollments</a>
-    </li>
-  </ul> -->
-</nav>
+  <div class="card-body">
+      <div class="container-fluid">
+        <table width="100%">
+          <tr width="100%">
+              <div class="row">
+                  <div class="col-xs-6 col-md-4">
+                      <div class="text-center">Developed by:</div>
+                  </div>
+                  <div class="col-xs-6 col-md-4">
+                      <div class="text-center">
+                          <h3>Vinayak Sawant</h3>
+                        </div>
+                  </div>
+                  <div class="col-xs-6 col-md-4">
+                      <div class="text-center">
+                        <a href="">Linkedin</a>
+                      </div>                    
+                    </div>
+                </div>
+          </tr>
+          <tr width="100%">
+            <td>
+                <div class="text-center">
+                    <img src="./assets/images/welcomepage515.gif"
+                         class="img-responsive center-block"
+                         style="width:100%; max-height:525px;padding-bottom:1px" />
+                  </div>            
+            </td>
+          </tr>        
+        </table>
+      </div>
+    </div>  
