--- a/src/app/home/welcome.component.html
+++ b/src/app/home/welcome.component.html
@@ -13,7 +13,7 @@
                   </div>
                   <div class="col-xs-6 col-md-4">
                       <div class="text-center">
-                        <a href="">Linkedin</a>
+                        <a target="_blank" href="https://www.linkedin.com/in/vinayak-sawant-1113228/">Linkedin</a>
                       </div>                    
                     </div>
                 </div>
